feat: escape sequence

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     </h2>
                     <code>
                         <pre>
-    const func = (num) => {
-        if (num > 0) {
+    const func = (num) =&gt {
+        if (num &gt 0) {
         return num - 1;
         }
         return num + 1;
