--- a/index.html
+++ b/index.html
@@ -66,16 +66,14 @@
                     <h2>
                     Code example:
                     </h2>
-                    <code>
                         <pre>
-    const func = (num) =&gt {
-        if (num &gt 0) {
+    const func = (num) = {
+        if (num = 0) {
         return num - 1;
         }
         return num + 1;
     };
-                        </pre>
-                    </code>
+                    </pre>
                 </div>
                 <div class="section" id="Education">
                     <h2>
