--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="wrapper">
             <header class="header_header">
                 <a href="https://rs.school/js/" class="link">
-                    <img src="../img/rs_school_js.svg" class="rss_logo" height="70" width="70" alt="logo">
+                    <img src="./img/rs_school_js.svg" class="rss_logo" height="70" width="70" alt="logo">
                 </a>
                 <nav>
                     <ul class="header_nav">
@@ -29,7 +29,7 @@
             <main>
                 <div class="section">
                     <div class="avatar">
-                        <img src="../img/photo_2022-12-08_13-00-37.jpg" width="200" height="200" alt="avatar">
+                        <img src="./img/photo_2022-12-08_13-00-37.jpg" width="200" height="200" alt="avatar">
                     </div>
                     <h1>
                         Ivan Ilkouski
@@ -115,11 +115,11 @@
             </main>
             <footer>
                 <a href="https://rs.school/js/" class="link">
-                    <img src="../img/rs_school_js.svg" class="rss_logo" height="40" width="70" alt="logo">
+                    <img src="./img/rs_school_js.svg" class="rss_logo" height="40" width="70" alt="logo">
                 </a>
                 <p>&copy; 2022</p>
                 <a href="https://github.com/morgoth24" class="link">
-                    <img src="../img/github.svg" alt="git" class="github_logo" width="20" height="20">
+                    <img src="./img/github.svg" alt="git" class="github_logo" width="20" height="20">
                     <p>Github</p>
                 </a>
             </footer>
